--- a/lobby-server/Cargo.toml
+++ b/lobby-server/Cargo.toml
@@ -10,3 +10,4 @@ uuid = { version = "1", features = ["v4", "serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 anyhow = "1"
+clap = { version = "*", features = ["derive"] }
