--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 parry2d = "0.17"
 rand = "0.8"
+anyhow = "1"
+sickle_ui = "0.2"
